--- a/01-HTML-CSS/taak03-Classes-en-Ids/index.html
+++ b/01-HTML-CSS/taak03-Classes-en-Ids/index.html
@@ -9,6 +9,17 @@
 <body>
 
     <script src="js/script.js"></script>
+    <div class="logo"></div>
+        <div class="left">
+            <div class="logo"></div>
+        </div>
+        <div class="middle">
+            <div class="logo"></div>
+        </div>
+        <div class="right">
+            <div class="logo"></div>
+        </div>
+
 </body>
 </html>
 
