--- a/02-Javascript/taak01-Herhaling/index.html
+++ b/02-Javascript/taak01-Herhaling/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>02-Javascript-Taak02-Herhaling</title>
+    <title>wat is jouw naam</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
